--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="col s12 l4">
                     <ul class="collapsible">
                         <li>
-                            <div class="collapsible-header orange darken-4 white-text"><i class="material-icons right white-text ">label</i>Cakes
+                            <div class="collapsible-header orange darken-4 white-text hoverable"><i class="material-icons right white-text ">label</i>Cakes
                             </div>
                             <div class="collapsible-body">
                                 <img class="responsive-img" src="img/sponge_cake.webp" alt="">
@@ -105,9 +105,9 @@
                     </ul>
                 </div>    
                 <div class="col s12 l4">
-                    <ul class="collapsible">
+                    <ul class="collapsible ">
                         <li>
-                            <div class="collapsible-header orange darken-4 white-text"><i class="material-icons right white-text ">label</i>Soups</div>
+                            <div class="collapsible-header orange darken-4 white-text hoverable"><i class="material-icons right white-text ">label</i>Soups</div>
                             <div class="collapsible-body">
                                 <img class="responsive-img" src="img/mexican_soup.webp" alt="">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. At ipsa hic incidunt consequuntur dignissimos culpa!
@@ -122,13 +122,13 @@
                 <div class="col s12 l4">
                     <ul class="collapsible">
                         <li>
-                            <div class="collapsible-header orange darken-4 white-text"><i class="material-icons right white-text ">label</i>Chicken</div>
+                            <div class="collapsible-header orange darken-4 white-text hoverable"><i class="material-icons right white-text ">label</i>Chicken</div>
                             <div class="collapsible-body">
                                 <img class="responsive-img" src="img/chicken_8.webp" alt="">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. At ipsa hic incidunt consequuntur dignissimos culpa!
                                 <br>
                                 <br>
-                                <a class="orange darken-4 white-text bold-text btn" href="">All Cake Receipes</a>
+                                <a class="orange darken-4 white-text bold-text btn" href="">All Chicken Receipes</a>
                             </div>
                             </div>
                         </li>
@@ -365,7 +365,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Lentil Soup</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Cook Now</a>
                         </div>
@@ -381,7 +381,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Olive Soup</h6>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Cook Now</a>
                         </div>
@@ -397,7 +397,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Miso Soup</h6>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Cook Now</a>
                         </div>
@@ -405,7 +405,7 @@
                 </div>
             </div>
 
-             <!-- Cake cards row 2 -->
+             <!-- Soups cards row 2 -->
             <div class="row">
                 <div class="col s12 m4 l4">
                     <div class="card hoverable">
@@ -416,7 +416,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Chilli Soup</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                         <a class="orange-text text-darken-4" href="">Contents</a>
                         <a class="orange-text text-darken-4" href="">Cook Now</a>
                         </div>
@@ -456,7 +456,7 @@
                 </div>
             </div>
     
-            <!-- Cake cards row 3 -->
+            <!-- Soups cards row 3 -->
             <div class="row">
                 <div class="col s12 m4 l4">
                     <div class="card hoverable">
@@ -467,7 +467,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Tom Soup</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Cook Now</a>
                         </div>
@@ -483,7 +483,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Morrocan Soup</h6>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Cook Now</a>
                         </div>
@@ -499,7 +499,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Mexican Soup</h6>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Cook Now</a>
                         </div>
@@ -533,7 +533,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Oreagano Wings</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Prepare Now</a>
                         </div>
@@ -549,7 +549,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Mashed Wings</h6>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Prepare Now</a>
                         </div>
@@ -565,7 +565,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Buttered Wings</h6>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Prepare Now</a>
                         </div>
@@ -584,7 +584,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Yoghurt Chicken</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                         <a class="orange-text text-darken-4" href="">Contents</a>
                         <a class="orange-text text-darken-4" href="">Prepare Now</a>
                         </div>
@@ -600,7 +600,7 @@
                                 <h6 class="orange-text text-darken-4 bold-text">Chicken Tikka</h6>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
                             </div>
-                            <div class="card-action">
+                            <div class="card-action center">
                                 <a class="orange-text text-darken-4" href="">Contents</a>
                                 <a class="orange-text text-darken-4" href="">Prepare Now</a>
                         </div>
@@ -616,7 +616,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Chicken Couscous</h6>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Prepare Now</a>
                         </div>
@@ -635,7 +635,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Caramel Chicken</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Prepare Now</a>
                         </div>
@@ -651,7 +651,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Chicken Ramen</h6>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Prepare Now</a>
                         </div>
@@ -667,7 +667,7 @@
                             <h6 class="orange-text text-darken-4 bold-text">Chicken Saag</h6>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
                         </div>
-                        <div class="card-action">
+                        <div class="card-action center">
                             <a class="orange-text text-darken-4" href="">Contents</a>
                             <a class="orange-text text-darken-4" href="">Prepare Now</a>
                         </div>
@@ -697,7 +697,7 @@
             </div>
         </div>
         <div class="footer-copyright orange darken-4 ">
-            <p class="copyright white-text"> © 2022 Recipe.com | Busayo </p> 
+            <p class=" white-text"> © 2022 Recipe.com | Busayo </p> 
     </div>
         
     </footer>
