--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                             <a class="orange-text text-darken-4 bold-text" href="">Home</a>
                         </li>
                         <li>
-                            <a class="orange-text text-darken-4 bold-text" href="">Cakes</a>
+                            <a class="orange-text text-darken-4 bold-text" href="#cakes_session">Cakes</a>
                         </li>
                         <li>
-                            <a class="orange-text text-darken-4 bold-text" href="">Soups</a>
+                            <a class="orange-text text-darken-4 bold-text" href="#soups_session">Soups</a>
                         </li>
                         <li>
-                            <a class="orange-text text-darken-4 bold-text" href="">Chicken</a>
+                            <a class="orange-text text-darken-4 bold-text" href="#chicken_session">Chicken</a>
                         </li>
                         <li>
-                            <a class="orange-text text-darken-4 bold-text" href="">Customers</a>
+                            <a class="orange-text text-darken-4 bold-text" href="#customers_session">Customers</a>
                         </li>
                     </ul>
                 </div>
@@ -138,8 +138,8 @@
         </div>
 
         <!-- Collections -->
-        <div class="container">
-            <h2 class="center orange-text text-darken-4">What our customers say...</h2>
+        <div id="customers_session" class="container">
+        <h2 class="center orange-text text-darken-4">What our customers say...</h2>
             <div class="row">
                 <div class="col s12">
                     <ul class="collection">
@@ -173,14 +173,14 @@
             </div>
         </div>
         <!-- parallax cake image -->
-       <div class="parallax-container">
+       <div id="cakes_session" class="parallax-container">
             <div class="parallax">
                 <img class="responsive-img" src="img/cake.jpg" alt="">
             </div>
        </div>
 
        <!-- Cakes section -->
-       <div class="container">
+       <div class="container ">
             <h2 class="orange-text text-darken-4">Cakes</h2>
             <p class="flow-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem explicabo quos, veritatis ab tempore enim alias ducimus nesciunt molestias impedit! Consequatur sunt facere excepturi molestiae praesentium amet sit incidunt debitis.</p>
 
@@ -341,14 +341,14 @@
        </div>
 
        <!-- parallax soup image -->
-        <div class="parallax-container">
-        <div class="parallax">
-            <img class="responsive-img" src="img/soup.jpg" alt="">
+       <div id="soups_session" class="parallax-container ">
+           <div class="parallax">
+               <img class="responsive-img" src="img/soup.jpg" alt="">
+            </div>
         </div>
-        </div>
-
-       <!-- Soups section -->
-        <div class="container">
+        
+        <!-- Soups section -->
+        <div  class="container">
             <h2 class="orange-text text-darken-4">Soups</h2>
             <p class="flow-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem id ex repellat, ut laborum aliquid consequuntur asperiores tempora ab totam officiis quos voluptate, harum quod nihil dolor odit explicabo exercitationem. </p>
 
@@ -509,7 +509,7 @@
         </div>
 
         <!-- parallax Chicken image -->
-        <div class="parallax-container">
+        <div id="chicken_session" class="parallax-container">
             <div class="parallax">
                 <img class="responsive-img" src="img/chicken.jpg" alt="">
             </div>
@@ -687,11 +687,21 @@
                 <div class="col s6 l4 push-l4">
                     <h4 class="orange-text text-darken-4 ">Quick Links</h4>
                     <ul>
-                        <li class="white-text">Back to top</li>
-                        <li class="white-text">Cakes</li>
-                        <li class="white-text">Soups</li>
-                        <li class="white-text">Chicken</li>
-                        <li class="white-text">Customers</li>
+                        <li>
+                            <a class="white-text" href="">Back to top</a>
+                        </li>
+                        <li>
+                            <a class="white-text" href="#cakes_session">Cakes</a>
+                        </li>
+                        <li>
+                            <a class="white-text" href="#soups_session">Soups</a>
+                        </li>
+                        <li>
+                            <a class="white-text" href="#chicken_session">Chicken</a>
+                        </li>
+                        <li>
+                            <a class="white-text" href="#customers_session">Customers</a>
+                        </li>
                     </ul>
                 </div>
             </div>
