added fixed action button

--- a/index.html
+++ b/index.html
@@ -719,6 +719,8 @@
         
     </footer>
 
+    <a class="btn btn-large btn-floating fixed-action-btn orange darken-4" href=""></a>
+
     <script src="js/jquery.js"></script>
     <script src="js/materialize.js"></script>
     <script>
