Contact section added

--- a/index.html
+++ b/index.html
@@ -686,7 +686,29 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 l6">
-                    
+                    <h3 class="orange-text text-darken-4">Contact Us Today!</h3>
+                    <p class="flow-text">The key to more success is to have a lot of pillows. We the best.</p>
+                    <a class= "orange darken-4 white-text btn btn-large left hoverable">Call Us Now<i class="right material-icons">phone</i></a>
+                </div>
+                <div class="col s12 l6">
+                    <form action="">
+                        <div class="col s12 input-field">
+                            <input type="text" name="name" id="name">
+                            <label for="name">Your Name</label>
+                        </div>
+                        <div class="col s12 input-field">
+                            <input type="email" name="email" id="email">
+                            <label for="email">Enter Your Email</label>
+                        </div>
+                        <div class="col s12 input-field">
+                            <input type="text" name="message" id="message">
+                            <label for="message">Your Message</label>
+                        </div>
+                        <br>
+                        <div class="center">
+                            <input class="btn btn-large orange darken-4 white-text center" type="submit" name="submit" id="submit">
+                        </div>
+                    </form> 
                 </div>
             </div>
         </div>
